--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     </issueManagement>
 
     <modules>
+        <module>bom</module>
         <module>api</module>
         <module>tests</module>
     </modules>
@@ -111,18 +112,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-    </build>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.1.13.Final</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    </build>
 
 </project>
