--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -55,13 +55,11 @@
         <dependency>
             <groupId>org.mvc-spec.tck</groupId>
             <artifactId>mvc-tck-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mvc-spec.tck</groupId>
             <artifactId>mvc-tck-tests</artifactId>
-            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -75,7 +73,6 @@
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-depchain</artifactId>
-            <version>3.0.0-beta-2</version>
             <scope>compile</scope>
             <type>pom</type>
         </dependency>
@@ -85,18 +82,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.1.13.Final</version>
+                <groupId>org.mvc-spec.tck</groupId>
+                <artifactId>mvc-tck-bom</artifactId>
+                <version>${project.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>3.0.0-beta-2</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
