--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>htmlunit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.test-audit</groupId>
+            <artifactId>jboss-test-audit-api</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -79,4 +84,128 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-sections-class</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.jboss.test.audit.generate.SectionsClassGenerator</mainClass>
+                            <arguments>
+                                <!-- auditFilePath -->
+                                <argument>${basedir}/src/main/resources/tck-audit.xml</argument>
+                                <!-- packageBase -->
+                                <argument>org.mvcspec.tck</argument>
+                                <!-- outputDirPath -->
+                                <argument>${basedir}/target/generated-sources/audit</argument>
+                            </arguments>
+                            <includePluginDependencies>true</includePluginDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jboss.test-audit</groupId>
+                        <artifactId>jboss-test-audit-impl</artifactId>
+                        <version>${jboss.test.audit.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>target/generated-sources/audit</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>${basedir}/src/main/resources/tck-audit.xml</file>
+                                    <type>xml</type>
+                                    <classifier>audit</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>${basedir}/target/coverage-report/coverage-mvcspec.html</file>
+                                    <type>html</type>
+                                    <classifier>coverage</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgument>-proc:none</compilerArgument>
+                    <compilerArgument>-parameters</compilerArgument>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.bsc.maven</groupId>
+                <artifactId>maven-processor-plugin</artifactId>
+                <configuration>
+                    <defaultOutputDirectory>${basedir}/target/coverage-report</defaultOutputDirectory>
+                    <addCompileSourceRoots>true</addCompileSourceRoots>
+                    <processors>
+                        <processor>org.jboss.test.audit.report.CoverageProcessor</processor>
+                    </processors>
+                    <compilerArguments>-AauditXml=${basedir}/src/main/resources/tck-audit.xml
+                        -AoutputDir=${basedir}/target/coverage-report -source ${maven.compiler.source}
+                        -target ${maven.compiler.target}
+                    </compilerArguments>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>process</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jboss.test-audit</groupId>
+                        <artifactId>jboss-test-audit-impl</artifactId>
+                        <version>${jboss.test.audit.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <systemProperties>
+                        <org.mvcspec.tck.api.BaseArchiveProvider>
+                            org.mvcspec.tck.runner.OzarkGlassfishProvider
+                        </org.mvcspec.tck.api.BaseArchiveProvider>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
