--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -47,6 +47,12 @@
         <dependencies>
 
             <dependency>
+                <groupId>javax</groupId>
+                <artifactId>javaee-web-api</artifactId>
+                <version>8.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>javax.mvc</groupId>
                 <artifactId>javax.mvc-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
