--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -42,7 +42,7 @@
                     <dependenciesToScan>org.mvc-spec.tck:mvc-tck-tests</dependenciesToScan>
                     <systemProperties>
                         <org.mvcspec.tck.api.BaseArchiveProvider>
-                            org.mvcspec.tck.runner.OzarkGlassfishProvider
+                            org.mvcspec.tck.runner.KrazoGlassfishProvider
                         </org.mvcspec.tck.api.BaseArchiveProvider>
                     </systemProperties>
                 </configuration>
