--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright © 2017 Christian Kaltepoth
+    Copyright © 2017, 2019 Christian Kaltepoth
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -71,6 +71,7 @@
         <module>bom</module>
         <module>api</module>
         <module>tests</module>
+        <module>sigtest</module>
     </modules>
 
     <developers>
