--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-jdk: oraclejdk8
+jdk: openjdk8
 script:
   - mvn -B -s .travis/deploy-settings.xml -Dcoverage-report clean install
 deploy:
