--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -57,7 +57,7 @@
             <dependency>
                 <groupId>javax.mvc</groupId>
                 <artifactId>javax.mvc-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${mvc-api.version}</version>
             </dependency>
 
             <dependency>
