--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mvc-api.version>1.0-SNAPSHOT</mvc-api.version>
+        <mvc-api.version>1.0.0-RC1</mvc-api.version>
     </properties>
 
     <licenses>
