--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.mvc-spec.tck</groupId>
         <artifactId>mvc-tck-parent</artifactId>
-        <version>1.0.0-RC1</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>mvc-tck-bom</artifactId>
